# atris

./: AUTHORS  Atris.Players  Atris.Scores  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  ai.c  ai.h  atris.c  atris.h  atris.spec.in  button.c  button.h  config.h.in  configure  configure.in  display.c  display.h  event.c  fastrand.c  filesystem.c  filesystem.h  gamemenu.c  grid.c  grid.h  highscore.c  highscore.h  icon.xpm  identity.c  identity.h  menu.c  menu.h  mkinstalldirs  network.c  (+6 more)
.protos/: Makefile.in  ai.pro  atris.pro  button.pro  display.pro  event.pro  gamemenu.pro  grid.pro  highscore.pro  identity.pro  makeprotos.pro  menu.pro  network.pro  p.pro  piece.pro  sound.pro  xflame.pro
Docs/: atris.html  faq.html  index.html
debian/: atris.de.1  atris.desktop  atris.postinst  atris.postrm  changelog  control  copyright  install  menu  rules
debian/patches/: 01-atris-1.0.7.Makefile.am_pathfix.diff  02-atris-1.0.7.proper_statedir.diff  03-atris-1.0.7.font_from_ttf-freefont.diff  05-atris-1.0.7.atrisrc.perms.fix.diff  series
styles/: Alphabet-Soup.Color  Blurry.Color  Deep-Blue.Color  Default.Color  End-Of-The-Line.Color  Makefile.in  Party-Mix.Color  Pentominoes.Piece  Red-Blue-Purple.Color  Shades-Of-Grey.Color  Small-Dots.Color  Tetris.Piece  Texture.Color  Two-Color-Process.Color  Uberominoes.Piece  Whirl.Color
